Fixed render sources not properly tracking